XMLExper/m12/m12_562_1_tinyxml2/comparisonS.txt
tinyxml2.cpp: In member function ‘virtual bool tinyxml2::XMLPrinter::Visit(const tinyxml2::XMLText&)’:
tinyxml2.cpp:3007:59: error: cannot dynamic_cast ‘text’ (of type ‘const class tinyxml2::XMLText’) to type ‘class tinyxml2::XMLNode&’ (conversion casts away constness)
 3007 |     PushText( /*PCI*/dynamic_cast<tinyxml2::XMLNode&>(text).Value(), text.CData() );
      |                                                           ^
diff: tinyxml2.S: No such file or directory
